Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-04-24 Kimmo
 PATCH: [ 1474884 ] Fix XmlDoc not releasing file handles
  Src: XmlDoc.cpp XmlDoc.h

2006-04-23 Kimmo
 PATCH: [ 1473902 ] Add dialog for editing and saving project files
  Src: DirDoc.cpp DirDoc.h MainFrm.cpp MainFrm.h Merge.dsp Merge.rc MergeDoc.cpp
   MergeDoc.h resource.h
  Src new files: ProjectFilePathsDlg.cpp ProjectFilePathsDlg.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1472622 ] Czech translation - update
  Submitted by: Jan Hryz
  Src/Languages/Czech/MergeCzec.rc
 PATCH: [ 1472622 ] Czech translation - update (apply dialog fixes)
  Submitted by: Jan Hryz
  Src/Languages/*: Merge*.rc

2006-04-22 Kimmo
 PATCH: [ 1473635 ] Move some results update code to DirDoc
  Src: DirActions.cpp DirDoc.cpp DirDoc.h
 PATCH: [ 1468691 ] Center folder compare status dialog to mainframe
  Adding line I missed previous time applying the patch (2006-04-12)
  Src: DirView.cpp

2006-04-20 Kimmo
 TODO: [ 1469363 ] Need image for aborted status in folder compare
  Icon from Tim
  Src: DirView.cpp Merge.rc resource.h
  Src/res new file: aborted.ico
  Src/Languages/*: Merge*.rc
 PATCH: [ 1400653 ] Write project files using objects
  Submitted by Perry
  Src: Merge.dsp ProjectFile.cpp ProjectFile.h
  Src new files: XmlDoc.cpp XmlDoc.h

2006-04-18 Kimmo
 PATCH: [ 1471835 ] Fix setting filename in folder-compare report dialog
  Src: DirCmpReportDlg.cpp DirCmpReportDlg.h

2006-04-18 Takashi
 PATCH: [ 1445996 ] Fix wrong PgDown scrolling after mousescroll(2)
  Src/editlib: ccrystaltextview2.cpp

2006-04-12 WinMerge experimental release 2.5.3.6 (cvs)

2006-04-12 Kimmo
 PATCH: [ 1468691 ] Center folder compare status dialog to mainframe
  Src: DirView.cpp
 PaTCH: [ 1468783 ] Fix disabled scrollbars after loading files
  Src: MergeDoc.cpp MergeEditView.cpp MergeEditView.h

2006-04-11 Kimmo
 PATCH: [ 1467872 ] Fix diff navigation for first-line of diff