@@ -5,6 +5,8 @@ Add new items to top.
 2006-04-24 Kimmo
  PATCH: [ 1474884 ] Fix XmlDoc not releasing file handles
   Src: XmlDoc.cpp XmlDoc.h
+ PATCH: [ 1475092 ] Add DocumentsLoaded() to MergeDiffDetailView
+  Src: MergeDiffDetailView.cpp MergeDiffDetailView.h MergeDoc.cpp
 
 2006-04-23 Kimmo
  PATCH: [ 1473902 ] Add dialog for editing and saving project files
